--- a/appartment.html
+++ b/appartment.html
@@ -27,6 +27,8 @@
   <!-- venobox popup -->
   <link rel="stylesheet" href="plugins/venobox/venobox.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
@@ -46,14 +48,22 @@
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
           <a class="text-color mr-3" href="tel:+(856) 786-4888"><strong>CALL</strong>(856) 786-4888</a>
+          <a class="text-color mr-3" href="mailto:phan@absolutegranites.com"><strong></strong>phan@absolutegranites.com</a>
         </div>
-        <div class="col-lg-8 text-center text-lg-right">
+        <div class="col-lg-4 text-center text-lg-right">
           <ul class="list-inline d-inline">
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://github.com"><i class="ti-github"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com"><i class="ti-instagram"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com/themefisher/"><i class="ti-facebook"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com/themefisher"><i class="ti-twitter-alt"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com/themefisher/"><i class="ti-instagram"></i></a></li>
           </ul>
+        </div>
+        <div class="col-lg-4 text-center text-lg-right">
+          <div class="search-container">
+            <form action="">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
@@ -62,58 +72,73 @@
   <div class="navigation w-100">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="220" alt="logo"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navigation">
-          <ul class="navbar-nav ml-auto text-center">
+          <ul class="navbar-nav ml-auto text-center" style="font-family: 'Playfair Display',Georgia,;font-family: 'Playfair Display',Georgia,&quot;Times New Roman&quot;,serif;">
             <li class="nav-item @@home">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item @@about">
-              <a class="nav-link" href="about.html">About</a>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Product
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
-                  <li><a class="dropdown-item" href="granite.html">Granite</a></li>
-                  <li><a class="dropdown-item" href="quartz.html">Quartz</a></li>
-                  <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Inspiration
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
-                  <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
-                  <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
-                  <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
-                  <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Commercial
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
-                  <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
-                  <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
-                  <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
-                </ul>
-              </li>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Inspiration
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
+                <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
+                <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
+                <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
+                <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Commercial
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
+                <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
+                <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
+                <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
+              </ul>
+            </li>
+            
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Product
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="granite.html">Granite</a></li>
+                <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
+                <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
+                <!-- <li><a class="dropdown-item" href="quartz.html">Quartz</a></li> -->
+                <li class="dropdown-item dropdown dropleft">
+                  <a class="dropdown-toggle" href="#" id="navbarDropdownSubmenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Quartz
+                  </a>
+                  <ul class="dropdown-menu dropdown-submenu" aria-labelledby="navbarDropdownSubmenu">
+                    <li><a class="dropdown-item" href="caesarstone_quartz.html">Caesarstone Quartz</a></li>
+                    <li><a class="dropdown-item" href="cambria_quartz.html">Cambria Quartz</a></li>
+                    <li><a class="dropdown-item" href="ecorecycled_quartz.html">ECO Recycled Quartz</a></li>
+                    <li><a class="dropdown-item" href="lgviatera_quartz.html">LG Viatera Quartz</a></li>
+                    <li><a class="dropdown-item" href="qpremium_quartz.html">Q Premium Quartz</a></li>
+                    <li><a class="dropdown-item" href="silestone_quartz.html">Silestone Quartz</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item @@freeestimate">
-              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+              <a class="nav-link" href="select_quote.html">SelectQuote</a>
+            </li>
+            <li class="nav-item @@about">
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@contact">
               <a class="nav-link" href="contact.html">CONTACT</a>
