--- a/lgviatera_quartz.html
+++ b/lgviatera_quartz.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
 	================================================== -->
   <meta charset="utf-8">
-  <title>Absolute Marble &amp; Granite Corp</title>
+  <title>Absolute Marble &amp; LG Viatera Quartz</title>
 
   <!-- Mobile Specific Metas
 	================================================== -->
@@ -28,7 +28,6 @@
   <link rel="stylesheet" href="plugins/venobox/venobox.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
@@ -222,7 +221,7 @@
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">Quartzite</li>
+          <li class="list-inline-item text-white h3 font-secondary nasted">LG Viatera Quartz</li>
         </ul>
       </div>
     </div>
@@ -238,10 +237,10 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/quartzite/1.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/quartz/lgviatera/1.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Ice Berg</h4>
+          <h4 class="card-title">Absolute Night</h4>
         </a>
       </div>
     </div>
@@ -249,10 +248,10 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/quartzite/2.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/quartz/lgviatera/2.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">La Dolce Vita</h4>
+          <h4 class="card-title">Antique Limestone</h4>
         </a>
       </div>
     </div>
@@ -260,26 +259,14 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/quartzite/3.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/quartz/lgviatera/3.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Madreperola</h4>
+          <h4 class="card-title">Aria</h4>
         </a>
       </div>
     </div>
   </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/quartzite/4.jpg" alt="course thumb">
-      <div class="card-body">
-        <a href="product.html">
-          <h4 class="card-title">Sea Pearl</h4>
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- course item -->
   </div>
 </section>
 <!-- /courses -->
@@ -364,7 +351,6 @@
           <ul class="list-inline">
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://facebook.com/"><i class="ti-facebook text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://twitter.com/"><i class="ti-twitter-alt text-primary"></i></a></li>
-            <li class="list-inline-item"><a class="d-inline-block p-2" href="https://github.com/"><i class="ti-github text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="https://instagram.com/"><i class="ti-instagram text-primary"></i></a></li>
           </ul>
         </div>
