--- a/gallery.html
+++ b/gallery.html
@@ -241,14 +241,40 @@
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/about/1.jpeg" alt="event thumb">
-            <!-- <div class="card-date"><span style="font-size: 14px;"><script>
+            <img class="card-img-top rounded-0" src="images/granite/1.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <!-- event -->
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/granite/2.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <!-- event -->
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/granite/3.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <!-- event -->
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/granite/4.jpg" alt="event thumb">
+            <!-- <div class="card-date"><span style="font-size: 14px;">
+            <script>
               var now = moment().format('Do');
               document.write(now)
             </script> </span><br><script>
               var now = moment().format('MMMM');
               document.write(now)
-            </script></div> -->
+            </script>
+            </div> -->
           </div>
         </div>
       </div>
@@ -256,7 +282,7 @@
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/about/2.jpeg" alt="event thumb">
+            <img class="card-img-top rounded-0" src="images/granite/5.jpg" alt="event thumb">
           </div>
         </div>
       </div>
@@ -264,52 +290,169 @@
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/about/3.jpeg" alt="event thumb">
+            <img class="card-img-top rounded-0" src="images/marble/1.jpg" alt="event thumb">
           </div>
         </div>
       </div>
-      <!-- event -->
+
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/design/1.png" alt="event thumb">
-            <div class="card-date"><span style="font-size: 14px;"><script>
-              var now = moment().format('Do');
-              document.write(now)
-            </script> </span><br><script>
-              var now = moment().format('MMMM');
-              document.write(now)
-            </script></div>
+            <img class="card-img-top rounded-0" src="images/marble/2.jpg" alt="event thumb">
           </div>
         </div>
       </div>
-      <!-- event -->
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/design/2.png" alt="event thumb">
-            <div class="card-date"><span style="font-size: 14px;"><script>
-              var now = moment().format('Do');
-              document.write(now)
-            </script> </span><br><script>
-              var now = moment().format('MMMM');
-              document.write(now)
-            </script></div>
+            <img class="card-img-top rounded-0" src="images/marble/3.jpg" alt="event thumb">
           </div>
         </div>
       </div>
-      <!-- event -->
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card border-0 rounded-0 hover-shadow">
           <div class="card-img position-relative">
-            <img class="card-img-top rounded-0" src="images/design/4.png" alt="event thumb">
-            <div class="card-date"><span style="font-size: 14px;"><script>
-              var now = moment().format('Do');
-              document.write(now)
-            </script> </span><br><script>
-              var now = moment().format('MMMM');
-              document.write(now)
-            </script></div>
+            <img class="card-img-top rounded-0" src="images/marble/4.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/marble/5.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/1.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/2.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/3.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/4.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/5.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/6.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/7.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/8.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/9.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/10.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/11.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/12.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/13.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/14.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/15.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/16.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/17.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/18.jpg" alt="event thumb">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-5">
+        <div class="card border-0 rounded-0 hover-shadow">
+          <div class="card-img position-relative">
+            <img class="card-img-top rounded-0" src="images/quartz/19.jpg" alt="event thumb">
           </div>
         </div>
       </div>
