--- a/select_quote.html
+++ b/select_quote.html
@@ -476,7 +476,7 @@
               granite countertop, granite table tops, fireplace , granite
               jacuzzi, granite hearths, granite vanities or granite bar tops.
             </p>
-            <form action="">
+            <form action="" method="POST">
               <div class="row">
                 <img src="images/kitchen-layout.png" alt="" />
                 <div class="col-md-3" style="text-align: center">
